--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.30</slf4j.version>
+
+        <!--DB-->
+        <postgresql.version>42.2.14</postgresql.version>
+        <!--    Tests  -->
+        <junit.version>4.13</junit.version>
+        <assertj.version>3.16.1</assertj.version>
     </properties>
 
     <build>
@@ -32,6 +38,14 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
         </plugins>
