--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <!--DB-->
         <postgresql.version>42.2.14</postgresql.version>
         <!--    Tests  -->
-        <junit.version>4.13</junit.version>
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <assertj.version>3.16.1</assertj.version>
         <hamcrest.version>1.3</hamcrest.version>
 
@@ -54,6 +54,7 @@
                 </configuration>
             </plugin>
             <plugin>
+                <!--https://junit.org/junit5/docs/current/user-guide/#running-tests-build-maven -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
