--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -21,6 +21,11 @@ user.registered=Registered
 user.password=Password
 user.caloriesPerDay=Daily calorie limit
 
+userTo.name=Name
+userTo.email=Email
+userTo.password=Password
+userTo.caloriesPerDay=Daily calorie limit
+
 meal.title=Meals
 meal.edit=Edit meal
 meal.add=Add meal
